<<<<<<< HEAD
<<<<<<< HEAD
Tweak plugin : admin.css for fix long notifs not hidden at end of moved (hide) process + notifications bg colors
```
.notification {
	top: -1000rem;/* tweak for long notifs not hidden at end of moved (hide) process */
}
```

## PLUXML 5.9.0 legacy PHP 5.5 (2020.06.06) ##
[+] Apply patch
#master: FIX Error "Constant PLX_SITE_LANG already defined" #455 (bazooka07)

[+] admin : parametres_users.php : No autofill & save pass browser box #471 (sudwebdesign)

## 2020.06.01
[+] Admin themes New notifications (error&success) bg colors

Fix Bad redirect on login + Bad msg with EDITOR profile
	::: $plxAdmin->checkProfil + $redirect AND
	::: Fix if plugin->adminProfil = '' & maybe more
	#never set by plug construct === bad redirect On logon :
	Always go to auth (never login whithout error msg)
	scope : admin/top.php (create plugins menus loop)
	 $plugInstance->getAdminProfil(..., false)
	```
							if($plxAdmin->checkProfil($plugInstance->getAdminProfil(),false)) {
	```
	Fix ; always show notification "Accès interdit" with PLX_EDITOR
		Set error message only if redirect is set to true on checkProfil
		Use case : use Tagz Plugin, connect in admin with EDITOR profile
	#1st Note
		Fix : admin are unaccessible if admin plugin page ($plxPlugin->adminAccess='') by default (found with Tagz & PLX_EDITOR user access) @sudwebdesign
		::: : plxAdmin->checkAdmin() + always bad message (accès interdit) if 1 plug $this->adminProfil='' (Plugin never call $this-setAdminProfil() in self contructor)
		:+: : error msg only if redirect is set to true ;)


[+] Apply last patch of master branch
	#96aa964 without New auth page (with knacss)
	-					$lostPasswordToken = plxToken::generateToken();
	+					$lostPasswordToken = plxToken::getTokenPostMethod(32, false);

	#f577662  Auth page fixes (#453) Co-authored-by: bazooka07
	Diverses corrections pour l'authentification #453
	Dans plxAdmin::sendLostPasswordEmail(),
		remplacer 'core/admin/' par constantes