@@ -131,7 +131,7 @@ class plxMotor {
 
 		# On parse le fichier de configuration
 		$this->getConfiguration($filename);
-		if(!defined('PLX_SITE_LANG')) define('PLX_SITE_LANG', $this->aConf['default_lang']);
+		define('PLX_SITE_LANG', $this->aConf['default_lang']);
 		# récupération des paramètres dans l'url
 		$this->get = plxUtils::getGets();
 		# gestion du timezone
